ros2_ws/log/build_2026-02-21_03-01-20/my_first_pkg/stderr.log
  File "/home/ahyildir/ros2_ws/install/my_first_pkg/lib/python3.10/site-packages/my_first_pkg/fusion_node.py", line 2
    import rclpy.node import Node
                      ^^^^^^
SyntaxError: invalid syntax

